# Celestial-Cup

./: CMakeLists.txt  CNAME  README.md  index.html  style.css
Celestial-Cup-Web/: index.html  style.css
sourcecode/: main.cpp
